<resources>
    <string name="app_name">Muslim Apps</string>
    <string name="image_masjid">image masjid</string>
    <string name="muslim_apps">Muslim Apps</string>
    <string name="yes">Iya</string>
    <string name="no">Tidak</string>
    <string name="ok">OK</string>
    <string name="no_data">Tidak Ada Data</string>
    <string name="close">Tutup</string>
    <string name="no_internet">Tidak Ada Koneksi Internet</string>
    <string name="body_internet">Anda harus mengaktifkan Data Seluler atau wifi untuk mengakses ini. Tekan OK untuk mengaktifkan internet</string>
    <string name="message_clear_cache">Sukses membersihkan cache</string>
    <string name="al_quran">Al-Quran</string>
    <string name="masjid_terdekat">Masjid Terdekat</string>
    <string name="jadwal_sholat">Jadwal Sholat</string>
    <string name="kumpulan_doa_doa">Kumpulan Doa-Doa</string>
    <string name="niat_sholat">Niat Sholat</string>
    <string name="bacaan_sholat">Bacaan Sholat</string>
    <string name="ayat_kursi">Ayat Kursi</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="keterangan">Keterangan</string>
    <string name="title_activity_masjid">MasjidActivity</string>
    <string name="button_back">Button Back</string>
    <string name="subuh">Subuh</string>
    <string name="zuhur">Dzuhur</string>
    <string name="ashar">Ashar</string>
    <string name="maghrib">Maghrib</string>
    <string name="isya">Isya</string>
    <string name="dummy_time">05:30 AM</string>
    <string name="terbit">Terbit</string>
    <string name="dhuha">Dhuha</string>
    <string name="imsak">Imsak</string>
    <string name="niat_shalat_wajib">Niat Shalat Wajib</string>
    <string name="bacaan_niat_shalat_wajib_5_waktu">Bacaan niat shalat wajib 5 waktu</string>
    <string name="bacaan_shalat_dari_doa_iftitah_sampai_salam">Bacaan shalat dari doa Iftitah sampai Salam</string>
    <string name="bacaan_ayat_kursi_dengan_tafsirnya">Bacaan Ayat Kursi dengan tafsirnya</string>
    <string name="tafsir">Tafsir</string>
    <string name="bismillah">بِسْمِ اللَّـهِ الرَّحْمَـٰنِ الرَّحِيمِ</string>
    <string name="dengan_menyebut_nama_allah_yang_maha_pemurah_lagi_maha_penyayang">Dengan menyebut nama Allah Yang Maha Pemurah lagi Maha Penyayang</string>
    <string name="assalamualaikum">Assalamualaikum</string>
    <string name="doa_sehari_hari_sudah_hafal_belum">Doa Sehari-hari, sudah hafal belum?</string>
    <string name="search">Search</string>
    <string name="voice">Voice</string>
</resources>