<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_white" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameHeader"
            android:layout_width="match_parent"
            android:layout_height="340dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:elevation="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_quran"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.83"
                app:riv_corner_radius_bottom_left="40dp"
                app:riv_corner_radius_bottom_right="40dp"
                app:riv_corner_radius_top_left="40dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/bg_rounded_all"
                android:backgroundTint="@color/colorPrimaryLight"
                android:gravity="bottom"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/ayat_kursi"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/bacaan_ayat_kursi_dengan_tafsirnya"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fabTafsir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/tafsir"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/frameHeader">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/itemBetweenMarginMedium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/bismillah"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/itemBetweenMarginMedium"
                    android:gravity="center"
                    android:text="@string/dengan_menyebut_nama_allah_yang_maha_pemurah_lagi_maha_penyayang"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/txtAyat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Ayat Kursi" />

                <TextView
                    android:id="@+id/txtLatin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    tools:text="Ayat Kursi" />

                <TextView
                    android:id="@+id/txtTerjemahan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    tools:text="Ayat Kursi" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>